fix sizes and overflows

--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@
 
 body {
     height: 100vh;
+    overflow: hidden;
 }
 
 main {
@@ -28,14 +29,16 @@ main {
 
 /* PARTE ONDE AS MENSAGENS SÃO EXIBIDAS */
 .chat-container .chat {
-    margin: 20px;
-    max-height: 90%;
+    margin: 20px 0;
+    height: 90%;
 
     overflow-y: auto;
+    overflow-x: hidden;
+    overflow-wrap: break-word;
 }
 
 .chat-container .chat .message {
-    margin-bottom: 2%;
+    margin: 24px;
 }
 
 .chat-container .chat .message .name {
